Ajustando Nome da Empresa do Ticket

--- a/Testes App.ipynb
+++ b/Testes App.ipynb
@@ -2,11 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "72a7313f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import yfinance as yf\n",
+    "\n",
+    "def carregar_dados(ticker, data_inicio, data_fim):\n",
+    "    \"\"\"\n",
+    "    Busca dados históricos e adiciona a última cotação intraday, se for de um novo dia.\n",
+    "    \"\"\"\n",
+    "    # 1. Cria o objeto Ticker para o ativo desejado\n",
+    "    require = yf.Ticker(ticker)\n",
+    "    name_ticker = require.info.get('longName', 'Unknown')\n",
+    "\n",
+    "    # 2. Busca o histórico diário principal\n",
+    "    data = require.history(start=data_inicio, end=data_fim)\n",
+    "\n",
+    "    # 3. Busca dados intraday bem recentes (últimos 2 dias, intervalo de 1 minuto)\n",
+    "    bd = require.history(period=\"2d\", interval='1m')\n",
+    "\n",
+    "    # 4. Compara as datas e concatena se necessário\n",
+    "    # Checa se o último dia do histórico é diferente do último dia do intraday\n",
+    "    if data.index[-1].date() != bd.index[-1].date():\n",
+    "        # Se forem diferentes, anexa a última cotação intraday ao histórico\n",
+    "        # Usamos pd.concat para garantir que os dataframes sejam unidos corretamente\n",
+    "        data = pd.concat([data, bd.tail(1)])\n",
+    "        \n",
+    "    return data, name_ticker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "346f7a6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iShares Ibovespa Index Fund\n",
+      "                                 Open        High         Low       Close  \\\n",
+      "2026-02-03 00:00:00-03:00  181.660004  183.809998  180.789993  182.190002   \n",
+      "2026-02-04 00:00:00-03:00  181.160004  181.279999  176.759995  178.199997   \n",
+      "2026-02-05 00:00:00-03:00  178.550003  180.669998  178.020004  178.649994   \n",
+      "2026-02-06 00:00:00-03:00  178.940002  179.800003  177.910004  179.240005   \n",
+      "2026-02-09 16:16:00-03:00  182.399994  182.399994  182.399994  182.399994   \n",
+      "\n",
+      "                            Volume  Dividends  Stock Splits  \n",
+      "2026-02-03 00:00:00-03:00  5835580        0.0           0.0  \n",
+      "2026-02-04 00:00:00-03:00  7115202        0.0           0.0  \n",
+      "2026-02-05 00:00:00-03:00  5358557        0.0           0.0  \n",
+      "2026-02-06 00:00:00-03:00  2905591        0.0           0.0  \n",
+      "2026-02-09 16:16:00-03:00        0        0.0           0.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "data, name_ticker = carregar_dados('BOVA11.SA', '2016-01-01', '2026-02-09')\n",
+    "print(name_ticker)\n",
+    "print(data.tail())"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +76,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.10"
   }
  },
