Ajustando as Datas Futuras de Acordo com a B3

--- a/Testes App.ipynb
+++ b/Testes App.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "72a7313f",
    "metadata": {},
    "outputs": [],
@@ -37,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "346f7a6a",
+   "execution_count": 28,
+   "id": "dc24d98f",
    "metadata": {},
    "outputs": [
     {
@@ -51,21 +51,62 @@
       "2026-02-04 00:00:00-03:00  181.160004  181.279999  176.759995  178.199997   \n",
       "2026-02-05 00:00:00-03:00  178.550003  180.669998  178.020004  178.649994   \n",
       "2026-02-06 00:00:00-03:00  178.940002  179.800003  177.910004  179.240005   \n",
-      "2026-02-09 16:16:00-03:00  182.399994  182.399994  182.399994  182.399994   \n",
+      "2026-02-13 16:59:00-03:00  182.419998  182.419998  182.320007  182.419998   \n",
       "\n",
       "                            Volume  Dividends  Stock Splits  \n",
       "2026-02-03 00:00:00-03:00  5835580        0.0           0.0  \n",
       "2026-02-04 00:00:00-03:00  7115202        0.0           0.0  \n",
       "2026-02-05 00:00:00-03:00  5358557        0.0           0.0  \n",
       "2026-02-06 00:00:00-03:00  2905591        0.0           0.0  \n",
-      "2026-02-09 16:16:00-03:00        0        0.0           0.0  \n"
+      "2026-02-13 16:59:00-03:00     8461        0.0           0.0  \n"
      ]
     }
    ],
    "source": [
-    "data, name_ticker = carregar_dados('BOVA11.SA', '2016-01-01', '2026-02-09')\n",
+    "bd, name_ticker = carregar_dados('BOVA11.SA', '2016-01-01', '2026-02-09')\n",
     "print(name_ticker)\n",
-    "print(data.tail())"
+    "print(bd.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0a14788b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2026-02-18 00:00:00-03:00', '2026-02-19 00:00:00-03:00',\n",
+       "               '2026-02-20 00:00:00-03:00', '2026-02-23 00:00:00-03:00',\n",
+       "               '2026-02-24 00:00:00-03:00', '2026-02-25 00:00:00-03:00',\n",
+       "               '2026-02-26 00:00:00-03:00', '2026-02-27 00:00:00-03:00',\n",
+       "               '2026-03-02 00:00:00-03:00', '2026-03-03 00:00:00-03:00'],\n",
+       "              dtype='datetime64[ns, America/Sao_Paulo]', freq=None)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bizdays import Calendar\n",
+    "\n",
+    "dates = pd.to_datetime(bd.index)\n",
+    "last_date = list(dates)[-1]\n",
+    "# Configuração única\n",
+    "cal = Calendar.load(\"B3\")\n",
+    "# Gera os próximos 10 dias úteis da B3\n",
+    "# forecast_dates = [pd.to_datetime(cal.offset(last_date, i)) for i in range(1, 10+1)]\n",
+    "forecast_dates = pd.to_datetime(cal.offset(last_date, range(1, 10+1)))\n",
+    "\n",
+    "original_tz = bd.index.tz\n",
+    "original_tz\n",
+    "\n",
+    "if original_tz is not None:\n",
+    "    forecast_dates = forecast_dates.tz_localize(original_tz)\n",
+    "forecast_dates"
    ]
   }
  ],
